--- a/draft/css/sand.less
+++ b/draft/css/sand.less
@@ -4,15 +4,20 @@
 @hlshadow: #2b4a70;
 
 * {padding: 0;margin: 0}
+.clear {clear: both;}
 
 body {
     margin: 0px;
     padding: 0px;
     font-family: Roboto,Tahoma,Helvetica,Arial,"Microsoft YaHei","黑体",'宋体',sans-serif,serif;
     font-size: 14px;
-    background-color: #f0f0f0;
+    background-color: #ffffff;
     -webkit-text-size-adjust:none;
 }
+
+/*
+.todelete{display: none;}
+*/
 
 #content {
     position: relative;
@@ -22,4 +27,99 @@ body {
     background-position: center top;
     background-size: 100% auto;
     .container {position: relative;}
+}
+
+/*沙盘*/
+
+#sandOverview {
+}
+
+#sandStory{
+
+    #frameComments {
+        padding: 8px;
+        background-color: #f0f0f0;
+        width: 100%;
+    }
+
+    #storyFrames {
+        width: 100%;
+        border: 1px dotted red;
+        svg {width: 100%;}
+    }
+    
+}
+
+
+#playBar {
+    .playBarBorder {
+        border: 4px solid #333;
+        background: #333;
+        border-radius: 8px;
+    }
+    .frameBox {
+        display: block;
+        padding: 4px;
+        margin: 0px;
+    }
+    .frameShot {
+        display: inline-block;
+        margin: 0px 4px;
+        border: 2px solid #fe8;
+        img {height: 88px;}
+    }
+
+    .frameShot.highlight {
+        border: 2px solid orange;
+        box-shadow: -2px 0px 1px #fc3, 2px 0px 1px #fc3,0px 2px 1px #fc3,0px -2px 1px #fc3;
+
+    }
+
+    .frameShot.selected {}
+}
+
+/*pawn 相关属性*/
+
+.pawn.blue{
+    .pawnBorder{
+        border: 1px solid blue;
+        background-color: blue;
+        box-shadow: 3px 5px 2px grey;
+    }
+}
+
+.pawn.red{
+    .pawnBorder{
+        border: 1px solid red;
+        background-color: red;
+        box-shadow: 3px 5px 2px grey;
+    }
+}
+
+.pawn.selected{
+    .pawnBorder{
+        border: 2px solid #6f3;
+        background-color: #f96;
+        box-shadow: 3px 5px 2px #cfc;
+    }
+}
+
+.pawn.death{}
+
+.pawn{
+    float: left;
+    cursor: pointer;
+    .pawnBorder{
+        border-radius: 64px;
+        width: 64px;
+        height: 64px;
+        overflow: hidden;
+        img {width: 100%;height: 100%;}
+    }
+}
+
+/*Editor*/
+
+#editor {
+    margin-top: 20px;
 }
